# rest-pdf-signer

./: .env.template  Dockerfile  README.md  cert.pfx  docker-compose.yaml  main.py  pyproject.toml
.devcontainer/: docker-compose.yaml
routers/: call.py
